- A new tactic name "exfalso" for the use of 'ex-falso quodlibet' principle.
  This tactic is simply a shortcut for "elimtype False".
- Added support for Leibniz-rewriting of dependent hypotheses.
- Binders given before ":" in lemmas are now automatically
  introduced in the context (possible source of incompatibility that can be
  avoided by unsetting option "Automatic Introduction").

Tactic Language

- Support for parsing non-empty lists with separators in tactic notations.

Notations

- Record syntax "{|x=...; y=...|}" now works inside patterns too.
- Abbreviations from non-imported module now invisible at printing time.
- Abbreviations now use implicit arguments and arguments scopes for printing.
- Abbreviations to pure names now strictly behave like the name they refer to
  (make redirections of qualified names easier).
- Abbreviations to applied names now propagate the implicit arguments and
  arguments scope of the underlying reference.
- The "where" clause now supports multiple notations per defined object.

Vernacular commands

- New command "Timeout <n> <command>." interprets a command and a timeout
  interrupts the interpretation after <n> seconds.
- Option -R now supports binding Coq root read-only.
- New support for local binders in the syntax of Record/Structure fields.
- Most commands referring to constant (e.g. Print or About) now support
  referring to the constant by a notation string.
- Added "Reserved Infix" as a specific shortcut of the corresponding
  "Reserved Notation".
- Open/Close Scope command supports Global option in sections.
- Ltac definitions support Local option for non-export outside modules.
- Made generation of boolean equality automatic for datatypes (use
  "Unset Boolean Equality Schemes" for deactivation).
- Made support for automatic generation of case analysis schemes and
  congruence schemes available to user (governed by options "Unset
  Case Analysis Schemes" and "Unset Congruence Schemes").