@@ -51,8 +51,7 @@ open Genarg
 
 
 let compute_renamed_type gls c =
-  let ids = collect_visible_vars c in
-  rename_bound_vars_as_displayed ids (pf_type_of gls c)
+  rename_bound_vars_as_displayed [] (pf_type_of gls c)
 
 let qed () = Lemmas.save_named true
 let defined () = Lemmas.save_named false
