@@ -45,6 +45,9 @@ Tactics
 - Binders given before ":" in lemmas are now automatically
   introduced in the context (possible source of incompatibility that can be
   avoided by unsetting option "Automatic Introduction").
+- Made choice of introduction names compliant with printed names and
+  in particular with "intros until" names (possible source of exceptional
+  incompatibilities).
 
 Tactic Language
 
